--- a/skeleton.html
+++ b/skeleton.html
@@ -1,4 +1,12 @@
 <html>
-	<head></head>
-	<body>{}</body>
-</html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css"/>
+	</head>
+	<body>
+		<div class="grid">
+			<div class="logo"></div>
+			<div class="menu"></div>
+			<div class="text">{}</div>
+		</div>
+	</body>
+ </html>
