--- a/skeleton.html
+++ b/skeleton.html
@@ -4,8 +4,12 @@
 	</head>
 	<body>
 		<div class="grid">
-			<div class="logo"></div>
-			<div class="menu"></div>
+			<div class="logo">
+				<h1>logo</h1>
+			</div>
+			<div class="menu">
+				<h3>menu</h3>
+			</div>
 			<div class="text">{}</div>
 		</div>
 	</body>
