--- a/skeleton.html
+++ b/skeleton.html
@@ -11,6 +11,9 @@
 				<h3>menu</h3>
 			</div>
 			<div class="text">{}</div>
+			<div class="footer">
+				<p>footer</p>
+			</div>
 		</div>
 	</body>
  </html>
