--- a/skeleton.html
+++ b/skeleton.html
@@ -8,7 +8,11 @@
 				<h1>logo</h1>
 			</div>
 			<div class="menu">
-				<h3>menu</h3>
+				<a href="team.md"><h4>team</h4></a>
+				<a href="externals.md"><h4>external visitors</h4></a>
+				<a href="events.md"><h4>events</h4></a>
+				<a href="publications"><h4>publications</h4></a>
+				<a href="hmm"><h4>hmm</h4></a>
 			</div>
 			<div class="text">{}</div>
 			<div class="footer">
