--- a/skeleton.html
+++ b/skeleton.html
@@ -11,7 +11,7 @@
 				<a href="team.md"><h3>team</h3></a>
 				<a href="externals.md"><h3>external visitors</h3></a>
 				<a href="events.md"><h3>events</h3></a>
-				<a href="publications"><h3>publications</h3></a>
+				<a href="publications.md"><h3>publications</h3></a>
 				<a href="hmm"><h3>hmm</h3></a>
 			</div>
 			<div class="text">{}</div>
