--- a/skeleton.html
+++ b/skeleton.html
@@ -5,10 +5,10 @@
 	<body>
 		<div class="grid">
 			<div class="logo">
-				<h1>logo</h1>
+				<a href="/" ><h1>logo</h1></a>
 			</div>
 			<div class="menu">
-				<a href="team.md"><h3>team</h3></a>
+				<a href="team.md"><h3>project team</h3></a>
 				<a href="externals.md"><h3>external visitors</h3></a>
 				<a href="events.md"><h3>events</h3></a>
 				<a href="publications.md"><h3>publications</h3></a>
