--- a/skeleton.html
+++ b/skeleton.html
@@ -5,7 +5,10 @@
 	<body>
 		<div class="grid">
 			<div class="logo">
-				<a href="/" ><h1>ACSATC</h1></a>
+				<a href="/" >
+					<img src="logoIMCAS.svg" alt="LOGO">
+					<h1>ACSATC</h1>
+				</a>
 			</div>
 			<div class="menu">
 				<a href="team.md"><h3>project team</h3></a>
