--- a/skeleton.html
+++ b/skeleton.html
@@ -5,8 +5,10 @@
 	<body>
 		<div class="grid">
 			<div class="logo">
-				<a href="/" >
-					<img src="logoIMCAS.svg" alt="LOGO">
+				<a href="http://www.math.cas.cz/">
+					<img src="logoIMCAS.svg" alt="LOGO" width="250vw">
+				</a>
+				<a href="/">
 					<h1>ACSATC</h1>
 				</a>
 			</div>
