--- a/skeleton.html
+++ b/skeleton.html
@@ -6,7 +6,7 @@
 		<div class="grid">
 			<div class="logo">
 				<a href="http://www.math.cas.cz/">
-					<img src="logoIMCASblack.svg" alt="LOGO" width="250vw">
+					<img src="logoIMCAS.svg" alt="LOGO" width="250vw">
 				</a>
 				<a href="/">
 					<h1>ACSATC</h1>
