--- a/skeleton.html
+++ b/skeleton.html
@@ -23,5 +23,7 @@
 			</div>
 			<div class="text">{}</div>
 		</div>
+		<hr>
+		<i>EXPRO project number 20-31529X funded by the Czech Science Foundation</i>
 	</body>
  </html>
