--- a/skeleton.html
+++ b/skeleton.html
@@ -12,6 +12,7 @@
 				</a>
 				<a href="/">
 					<h1>ACSATC</h1>
+					<h6>EXPRO project number 20-31529X funded by the Czech Science Foundation</h6> 
 				</a>
 			</div>
 			<div class="menu">
