--- a/skeleton.html
+++ b/skeleton.html
@@ -12,8 +12,8 @@
 				</a>
 				<a href="/">
 					<h1>ACSATC</h1>
-					<h6>EXPRO project number 20-31529X funded by the Czech Science Foundation</h6> 
 				</a>
+				<h6>EXPRO project number 20-31529X<br>funded by the Czech Science Foundation</h6> 
 			</div>
 			<div class="menu">
 				<a href="team.md"><h3>project team</h3></a>
