--- a/skeleton.html
+++ b/skeleton.html
@@ -13,7 +13,7 @@
 				<a href="/">
 					<h1>ACSATC</h1>
 				</a>
-				<h6>EXPRO project number 20-31529X<br>funded by the Czech Science Foundation</h6> 
+				<i>EXPRO project number 20-31529X<br>funded by the Czech Science Foundation</i> 
 			</div>
 			<div class="menu">
 				<a href="team.md"><h3>project team</h3></a>
