--- a/skeleton.html
+++ b/skeleton.html
@@ -22,6 +22,14 @@
 				<a href="publications.md"><h3>publications</h3></a>
 				<a href="preprints.md"><h3>preprints</h3></a>
 			</div>
+			<div class="ugly">
+				<h3>
+				EXPRO project of excellence in basic research
+				</h3>
+				<h1>
+				Abstract Convergence Schemes And Their Complexities
+				</h1>
+			</div>
 			<div class="text">{}</div>
 		</div>
 	</body>
