--- a/skeleton.html
+++ b/skeleton.html
@@ -21,6 +21,15 @@
 				<a href="events.md"><h3>events</h3></a>
 				<a href="publications.md"><h3>publications</h3></a>
 				<a href="preprints.md"><h3>preprints</h3></a>
+				<i>
+Project number: 20-31529X
+
+Project acronym: ACSATC
+
+Starting date: 01.01.2020
+
+End date: 31.12.2024
+				</i>
 			</div>
 			<div class="ugly">
 				<h3>
