--- a/skeleton.html
+++ b/skeleton.html
@@ -22,13 +22,10 @@
 				<a href="publications.md"><h3>publications</h3></a>
 				<a href="preprints.md"><h3>preprints</h3></a>
 				<i>
-Project number: 20-31529X
-
-Project acronym: ACSATC
-
-Starting date: 01.01.2020
-
-End date: 31.12.2024
+					Project number: 20-31529X<br>
+					Project acronym: ACSATC<br>
+					Starting date: 01.01.2020<br>
+					End date: 31.12.2024<br>
 				</i>
 			</div>
 			<div class="ugly">
