--- a/skeleton.html
+++ b/skeleton.html
@@ -16,11 +16,11 @@
 				<i>EXPRO project number 20-31529X<br>funded by the Czech Science Foundation</i> 
 			</div>
 			<div class="menu">
-				<a href="team.md"><h3>project team</h3></a>
-				<a href="externals.md"><h3>external visitors</h3></a>
-				<a href="events.md"><h3>events</h3></a>
-				<a href="publications.md"><h3>publications</h3></a>
-				<a href="preprints.md"><h3>preprints</h3></a>
+				<a href="team"><h3>project team</h3></a>
+				<a href="externals"><h3>external visitors</h3></a>
+				<a href="events"><h3>events</h3></a>
+				<a href="publications"><h3>publications</h3></a>
+				<a href="preprints"><h3>preprints</h3></a>
 				<i>
 					Project number: 20-31529X<br>
 					Project acronym: ACSATC<br>
