--- a/skeleton.html
+++ b/skeleton.html
@@ -13,7 +13,7 @@
 				<a href="/">
 					<h1>ACSATC</h1>
 				</a>
-				<i>EXPRO project number 20-31529X<br>funded by the Czech Science Foundation</i> 
+				<i>funded by the <a href="https://gacr.cz/en/">Czech Science Foundation</a></i> 
 			</div>
 			<div class="menu">
 				<a href="team"><h3>project team</h3></a>
