introtext almost done

--- a/skeleton.html
+++ b/skeleton.html
@@ -10,7 +10,7 @@
 		<div class="grid">
 			<div class="logo">
 				<a href="http://www.math.cas.cz/">
-					<img src="logoIMCAS.svg" alt="LOGO" width="100%">
+					<img src="fotos/logoIMCAS.svg" alt="LOGO" width="100%">
 				</a>
 				<a href="/">
 					<h1>ACSATC</h1>
